# attemped-neural-net

./: .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.hpp  README.md  StringMatrixMap.cpp  StringMatrixMap.hpp  Util.cpp  Util.hpp  compile  first_1000  main.cpp  main_analyze.cpp  output  watch  watch-debug
deprecated/: Kernel.cpp  Kernel.hpp
neural/: Neural.cpp  Neural.hpp  NeuralUtil.cpp  NeuralUtil.hpp  Weights.cpp  Weights.hpp
resources/: first_weights  output_weights  second_weights
